force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Batch_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>rh2__Batch_Agent_Id__c</fullName>
    <label>Batch Agent Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>