force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Disable_Advanced_Currency__c.field-meta.xml
<CustomField>
    <fullName>rh2__Disable_Advanced_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if advanced currency management should be disabled.</description>
    <inlineHelpText>If Advanced Currency Management is disabled in your organization select this check box.</inlineHelpText>
    <label>Disable Advanced Currency</label>
    <type>Checkbox</type>
</CustomField>