force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Disable_Auto_Running_User_Changes__c.field-meta.xml
<CustomField>
    <fullName>rh2__Disable_Auto_Running_User_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, automatic processes will not update the running user for Rollup Helper.</inlineHelpText>
    <label>Disable Auto Changes to Running User</label>
    <type>Checkbox</type>
</CustomField>