force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Disable_Currency_Update_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>rh2__Disable_Currency_Update_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will disable the functionality which recalculates currency rollups after changing the CurrencyIsoCode of a child record</description>
    <inlineHelpText>Check this box if you do not want to recalculate currency rollups after a change in a child record&apos;s CurrencyIsoCode field</inlineHelpText>
    <label>Disable Currency Update Recalculation</label>
    <type>Checkbox</type>
</CustomField>