force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Disable_Rollup_Auditing__c.field-meta.xml
<CustomField>
    <fullName>rh2__Disable_Rollup_Auditing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will disable rollup auditing.</description>
    <inlineHelpText>Check this box to disable rollup auditing.</inlineHelpText>
    <label>Disable Rollup Auditing</label>
    <type>Checkbox</type>
</CustomField>