force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__emailToSendExceptions__c.field-meta.xml
<CustomField>
    <fullName>rh2__emailToSendExceptions__c</fullName>
    <inlineHelpText>Rollup Helper will send an email to the specified email address daily with a summary of exceptions that have occurred (no emails will be sent if this field is not populated).</inlineHelpText>
    <label>Email To Send Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>