force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Enable_Single_Parent_Processing__c.field-meta.xml
<CustomField>
    <fullName>rh2__Enable_Single_Parent_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked will prevent multiple children from attempting to update the same parent at the same time.</description>
    <inlineHelpText>This will help to prevent record locks caused by multiple rollups attempting to update the same object at the same time.</inlineHelpText>
    <label>Enable Single Parent Processing</label>
    <type>Checkbox</type>
</CustomField>