force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Limit_Pre_Processing__c.field-meta.xml
<CustomField>
    <fullName>rh2__Limit_Pre_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field removes non-essential processing such as filtering out fields that don&apos;t need to be updated.  Leave this unchecked if you only want rollups to be processed when a change is actually made to the source field. However, disabling this setting does not guarantee that rollups will not process, as other conditions can necessitate that processing occurs. Some examples are if the source object is a knowledge article, or the source object has custom formula fields.</description>
    <inlineHelpText>Check this field to remove non-essential processing such as filtering out fields that don&apos;t need to be updated. Leave this unchecked to have rollups only process when a change is made to the source field and no fields used in the rollup were updated.</inlineHelpText>
    <label>Limit Pre Processing</label>
    <type>Checkbox</type>
</CustomField>