force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Limit_Processing_During_Data_Load__c.field-meta.xml
<CustomField>
    <fullName>rh2__Limit_Processing_During_Data_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is deprecated.</inlineHelpText>
    <label>zDeprecated</label>
    <type>Checkbox</type>
</CustomField>