force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__MaxExceptions__c.field-meta.xml
<CustomField>
    <fullName>rh2__MaxExceptions__c</fullName>
    <inlineHelpText>The maximum number of exception records that get created when errors are encountered during rollup runs. The default number of exceptions is 10,000.</inlineHelpText>
    <label>Max Exception Records</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>