force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__MaxFuture__c.field-meta.xml
<CustomField>
    <fullName>rh2__MaxFuture__c</fullName>
    <inlineHelpText>Number of Future method calls that Rollup Helper can initiate concurrently.  We recommend that the total number of jobs available between Batch, Future, and Queueable is at least 30 concurrent jobs available to Rollup Helper.</inlineHelpText>
    <label>Max Concurrent Future Processes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>