force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__MaxQueueable__c.field-meta.xml
<CustomField>
    <fullName>rh2__MaxQueueable__c</fullName>
    <inlineHelpText>Number of Queueable jobs that Rollup Helper can initiate concurrently.  We recommend that the total number of jobs available between Batch, Future, and Queueable is at least 30 concurrent jobs available to Rollup Helper.</inlineHelpText>
    <label>Maximum Jobs Added to the Queue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>