force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Parent_Sync_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>rh2__Parent_Sync_Job_Id__c</fullName>
    <label>zDeprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>