force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Record_Size__c.field-meta.xml
<CustomField>
    <fullName>rh2__Record_Size__c</fullName>
    <inlineHelpText>Maximum number of records to process asynchronously with Rollup Helper.  This impacts the number of batch / future methods will be called in order to process your entire set of records to complete an asynchronous transaction.  Best to be a multiple of 5.</inlineHelpText>
    <label>zDeprecated</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>