force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__RecordScope__c.field-meta.xml
<CustomField>
    <fullName>rh2__RecordScope__c</fullName>
    <inlineHelpText>Maximum number of records to process per asynchronous job with Rollup Helper.  This impacts the number of async calls needed to complete an asynchronous transaction.  Best to be a multiple of 5, default value is 400.</inlineHelpText>
    <label>Record Scope</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>