force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Rollup_Inactive_Upon_Creation__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollup_Inactive_Upon_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this setting is checked, new rollups will not be automatically activated upon creation.</inlineHelpText>
    <label>Rollup Inactive Upon Creation</label>
    <type>Checkbox</type>
</CustomField>