force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Rollups_Per_Async__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollups_Per_Async__c</fullName>
    <inlineHelpText>This setting modifies the number of rollups processed per asynchronous job request.  This should generally be set to the highest count of rollups which share the same source object, target object, and filter.</inlineHelpText>
    <label>Rollups Per Asynchronous Request</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>