force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Run_Realtime_Rollup__c.field-meta.xml
<CustomField>
    <fullName>rh2__Run_Realtime_Rollup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the realtime disable script may be used to temporarily turn off rollups.  For more details, please contact support@passagetech.com.</description>
    <inlineHelpText>If checked, the realtime disable script may be used to temporarily turn off rollups.  For more details, please contact support@passagetech.com.</inlineHelpText>
    <label>Allow Disable Realtime By Script</label>
    <type>Checkbox</type>
</CustomField>