force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Trigger_Deployments_Run_Tests__c.field-meta.xml
<CustomField>
    <fullName>rh2__Trigger_Deployments_Run_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked all local tests will run during realtime trigger deployments. If left unchecked only the realtime trigger test will run.  It is recommended to run all local tests when adding a new trigger.</description>
    <label>Run All Local Tests on Trigger Creation?</label>
    <type>Checkbox</type>
</CustomField>