force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__ValidateRollup__c.field-meta.xml
<CustomField>
    <fullName>rh2__ValidateRollup__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, this setting causes Rollup Helper to automatically run rollup queries for validation purposes each time a rollup is created or edited.</inlineHelpText>
    <label>Validate Rollup Query</label>
    <type>Checkbox</type>
</CustomField>